--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="landing page/index.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="titan.jpg" width=150>
+                <img src="landing page/titan.jpg" width=150>
             </div>
             <div class="menu">
                 <a href="#">Home</a>
@@ -41,9 +41,9 @@
                 </div>
             </div>
             <div class="s-icon animate__animated animate__lightSpeedInLeft animate__delay-2s">
-                <img src="Instagram_logo_2022.svg.webp">
-                <img src="whatsapp.avif">
-                <img src="facebook.png">
+                <img src="landing page/Instagram_logo_2022.svg.webp">
+                <img src="landing page/whatsapp.avif">
+                <img src="landing page/facebook.png">
                 <img src="twitter-667462_640.webp">
 
             </div>
