--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                     <button>Order now</button>
                 </div>
                  <div class="right">
-                    <img src="2656WM01_1.webp" class="animate__animated animate__lightSpeedInLeft animate__delay-1s">
+                    <img src="landing page/2656WM01_1.webp" class="animate__animated animate__lightSpeedInLeft animate__delay-1s">
                 </div>
             </div>
             <div class="s-icon animate__animated animate__lightSpeedInLeft animate__delay-2s">
                 <img src="landing page/Instagram_logo_2022.svg.webp">
                 <img src="landing page/whatsapp.avif">
                 <img src="landing page/facebook.png">
-                <img src="twitter-667462_640.webp">
+                <img src="landing page/twitter-667462_640.webp">
 
             </div>
     </header>
